# UseWise

./: .gitignore  README.md
.github/workflows/: docker.yml
api/: .env.example  Dockerfile  README.md  eval.py  pyproject.toml  usewise_feedback.db
api/results/: eval.json  eval.txt
api/test_data/: apple_privacy_policy.txt  galaxus_privacy_policy.txt  migros_privacy_policy.txt  sample_privacy_policy.txt
api/tests/: test_eval_script.py  test_privacy_policy_explainer.py  test_prompt.py
api/usewise/: main.py
api/usewise/db/: database.py  models.py
api/usewise/http/: router.py
api/usewise/llm/: config.py  privacy_policy_explainer.py  prompt.py  schemas.py
api/usewise/restApi/: router.py  utils.py
deploy/: docker-compose.yml  nginx.conf  setup.sh  update.sh  usewise-api.service
doc/pv/: 20260225.md
web/: Dockerfile  index.html  info.md  nginx.conf  package-lock.json  package.json  tailwind.config.js
web/src/: App.tsx  api.ts  exportPdf.ts  index.css
web/src/components/: AboutPage.tsx  Card.tsx  HowItWorksModal.tsx  LoadingPage.tsx  MainContent.tsx  Navbar.tsx  ResultsPage.tsx  Sidebar.tsx
