[project]
name = "usewise"
version = "0.0.1"
description = "description"
authors = [
    { name = "Manuel Speranza", email = "manuel.speranza@epfl.ch" },
    { name = "Reda Merahi", email = "reda.merahi@epfl.ch" },
    { name = "Simon Barras", email = "simon.barras@epfl.ch" },
    { name = "Philippe", email = "philippe@epfl.ch" }
]
requires-python = ">=3.9"
dependencies = [
    "mypy",
    "langchain-core",
    "langchain",
    "langchain-openai"
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["usewise"]

[project.scripts]
usewise-mypy = "usewise.main:mypy"